Fix card dark mode heading color

--- a/src/Chirp.Web/wwwroot/css/style.css
+++ b/src/Chirp.Web/wwwroot/css/style.css
@@ -341,7 +341,7 @@ ul.nav li a:hover {
 
 .card-heading {
     margin: 0;
-    color: #7E2C2C;
+    color: var(--link-color);
 }
 
 .followers-card {
